Changed tax state model ordered default to true and cleanup